--- a/javascript-dom_manipulation/4-main.html
+++ b/javascript-dom_manipulation/4-main.html
@@ -7,9 +7,15 @@
     <header> 
       First HTML page
     </header>
+    <br />
+    <div id="add_item">Add item</div>
+    <br />
+    <ul class="my_list">
+      <li>Item</li>
+    </ul>
     <footer>
       Holberton School - 2022
     </footer>
-    <script type="text/javascript" src="0-script.js"></script>
+    <script type="text/javascript" src="4-script.js"></script>
   </body>
 </html>
