--- a/javascript-dom_manipulation/5-main.html
+++ b/javascript-dom_manipulation/5-main.html
@@ -7,9 +7,12 @@
     <header> 
       First HTML page
     </header>
+    <br />
+    <div id="update_header">Update the header</div>
+    <br />
     <footer>
       Holberton School - 2022
     </footer>
-    <script type="text/javascript" src="0-script.js"></script>
+    <script type="text/javascript" src="5-script.js"></script>
   </body>
 </html>
